# algorithms_python

./: .gitignore  README.md  pyproject.toml
homework_1/: Makefile
homework_1/palindrome/: palindrome.ipynb  palindrome.py  test_palindrome.py
homework_1/prime/: prime.ipynb  prime.py  test_prime.py
homework_1/sum/: sum.ipynb  sum.py  test_sum.py
homework_2/: Makefile
homework_2/merge_lists/: merge_lists.ipynb  merge_lists.py  test_merge_lists.py
homework_2/stack_vs_queue/: stack_vs_queue.py
homework_2/validate/: test_validate.py  validate.ipynb  validate.py
homework_3/: Makefile
homework_3/anagrams/: anagrams.ipynb  anagrams.py  stack_vs_queue.ipynb  test_anagrams.py  test_stack_vs_queue.py
homework_3/hash_table/: hash_table.ipynb  hash_table.py  stack.py  test_hash_table.py
homework_3/merge_lists/: linked_list.py
homework_3/two_sum/: test_two_sum.py  two_sum.ipynb  two_sum.py
homework_3/validate/: stack.py  test_validate.py  validate.py
homework_4/: Makefile
homework_4/balanced_binary_tree/: balanced_binary_tree.ipynb  balanced_binary_tree.py  bst.py  test_balanced_binary_tree.py
homework_4/traversal/: test_traversal.py  traversal.ipynb  treenode.py
homework_4/validate_bst/: test_validate_bst.py  validate_bst.ipynb  validate_bst.py
homework_5/: Makefile
homework_5/avl/: avl.ipynb  avl.py  test_avl.py
homework_5/permutations/: permutations.ipynb  permutations.py  test_permutations.py
homework_6/: Makefile
homework_7/: Makefile
homework_8/: Makefile
homework_9/: Makefile
seminar/: sem1.ipynb
utils/: input_utils.py
(+36 files in other folders)
