[tool.poetry]
name = "algorithms-python"
version = "0.1.0"
description = ""
authors = ["adpakw <adpakw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.30.1"
pytest = "^8.4.2"
mypy = "^1.18.1"
ruff = "^0.13.0"
numpy = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
